--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <h1 class="main-header">MYANMAR REVOLUTION SUPPORTERS</h1>
     <h1 class="main-header-short">(M.R.S)</h1>
     <h3 class="sub-header">We Support NUG.</h3>
-    <img src="img/logo.png" alt="mrs-logo" class="main-logo">
+    <div class="nav">
+        <a href="about.css" class="about">About</a>
+        <a href="contact.css" class="contact">Contact</a>
+    </div>
 </header>
 
 </html>
